Project upgrade
- upgrade to spring-boot 3.3.5;
- upgrade to Java 21;
- upgrade wrapperVersion to 3.3.2 and apache-maven to 3.9.9;
- upgrade to springdoc-openapi 2.6.0;
- upgrade to amazon-awssdk 2.29.3;
- upgrade to spring-cloud-aws. 3.2.1;
- upgrade to opensearch-client 2.17.1;
- upgrade to jib-maven-plugin 3.4.4;
- upgrade to localstack docker image 3.8.1;
- remove version from docker-compose.yml;
- update README.